Optimizing dev env build

--- a/angular.json
+++ b/angular.json
@@ -64,9 +64,9 @@
                   "with": "src/environments/environment.dev.ts"
                 }
               ],
-              "optimization": false,
+              "optimization": true,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": false
             }
           },
           "defaultConfiguration": "prod"
