outputHashing set to true

--- a/angular.json
+++ b/angular.json
@@ -65,6 +65,7 @@
                 }
               ],
               "optimization": true,
+              "outputHashing": "all",
               "extractLicenses": false,
               "sourceMap": false
             }
